Change media query to fix prompt on iphone XR

--- a/src/index.scss
+++ b/src/index.scss
@@ -95,13 +95,15 @@ svg {
 @media (min-width:370px) {
   .drop-down-prompt {
     font-size: 14px;
+    padding-top: 1rem;
   }
 }
-@media (min-width:400px) {
+@media (min-width:420px) {
   .drop-down-prompt {
     font-size: 16px;
     text-align: right;
     margin-right: 1.2rem;
+
   }
 }
 @media (min-width:600px) {
